@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-10T16:22:07Z",
+  "timestamp" : "2022-08-11T08:18:24Z",
   "count_outdated" : 445,
   "uniques_outdated" : 256,
-  "count" : 489,
+  "count" : 488,
   "uniques" : 282,
   "clones" : [
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
