@@ -1,10 +1,10 @@
 {
-  "count": 44,
+  "count": 43,
   "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
