@@ -1,3 +1,10 @@
+2022-08-11T08:18:24Z:
+* notice: last 14d: unq all: 13 43
+* notice: prev accum: outdated-unq outdated-all / unq all: 256 445 / 282 489
+* notice: next accum: outdated-unq outdated-all / unq all: 256 445 / 282 488
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-28]
+
 2022-08-10T16:22:07Z:
 * notice: last 14d: unq all: 13 44
 * notice: prev accum: outdated-unq outdated-all / unq all: 255 443 / 282 488
